--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ propcache==0.2.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 PyPDF2==3.0.1
+pyspellchecker==0.8.1
 python-dotenv==1.0.1
 regex==2024.9.11
 requests==2.32.3
